<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">calculator</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="calculator">calculator</string>
    <string name="valuea">valuea</string>
    <string name="valueb">valueb</string>
    <string name="ADD">ADD</string>
    <string name="SUBTRACT">SUBTRACT</string>
    <string name="MUL">MUL</string>
    <string name="DIV">DIV</string>
    <string name="square">square</string>
    <string name="SQRT">SQRT</string>
    <string name="clear"></string>
    <string name="clearr">clearr</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="dot">.</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="mul">*</string>
    <string name="div">/</string>
    <string name="equal">=</string>
    <string name="clea">C</string>
    <string name="percentage">%</string>
    <string name="mult">X</string>

</resources>
