<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <EditText
        android:id="@+id/editText1"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="number" />

    <Button
        android:id="@+id/one"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText1"
        android:layout_below="@+id/editText1"
        android:text="@string/one"
         />

    <Button
        android:id="@+id/plus"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/three"
        android:layout_alignBottom="@+id/three"
        android:layout_alignRight="@+id/editText1"
        android:layout_marginRight="14dp"
        android:text="@string/plus" />

    <Button
        android:id="@+id/four"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/one"
        android:layout_below="@+id/one"
        android:layout_marginTop="16dp"
        android:text="@string/four" />

    <Button
        android:id="@+id/five"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/two"
        android:layout_below="@+id/two"
        android:layout_marginTop="16dp"
        android:text="@string/five" />

    <Button
        android:id="@+id/six"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/four"
        android:layout_alignBottom="@+id/four"
        android:layout_toRightOf="@+id/two"
        android:text="@string/six" />

    <Button
        android:id="@+id/seven"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/four"
        android:layout_below="@+id/four"
        android:layout_marginTop="16dp"
        android:text="@string/seven" />

    <Button
        android:id="@+id/eight"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/seven"
        android:layout_alignBottom="@+id/seven"
        android:layout_alignLeft="@+id/five"
        android:text="@string/eight" />

    <Button
        android:id="@+id/nine"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/eight"
        android:layout_alignBottom="@+id/eight"
        android:layout_alignLeft="@+id/six"
        android:text="@string/nine" />

    <Button
        android:id="@+id/zero"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/eight"
        android:layout_below="@+id/eight"
        android:layout_marginTop="15dp"
        android:text="@string/zero" />

    <Button
        android:id="@+id/mul"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/zero"
        android:layout_alignLeft="@+id/plus"
        android:text="@string/mult" />

    <Button
        android:id="@+id/clear"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/zero"
        android:layout_alignBottom="@+id/zero"
        android:layout_alignLeft="@+id/nine"
        android:text="@string/clea" />

    <Button
        android:id="@+id/dot"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/zero"
        android:layout_alignBottom="@+id/zero"
        android:layout_alignLeft="@+id/seven"
        android:text="@string/dot" />

    <Button
        android:id="@+id/three"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/five"
        android:layout_alignLeft="@+id/six"
        android:text="@string/three" />

    <Button
        android:id="@+id/two"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/four"
        android:layout_toRightOf="@+id/one"
        android:text="@string/two" />

    <Button
        android:id="@+id/minus"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/seven"
        android:layout_alignLeft="@+id/mul"
        android:text="@string/minus" />

    <Button
        android:id="@+id/div"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/clear"
        android:layout_alignBottom="@+id/clear"
        android:layout_alignLeft="@+id/mul"
        android:text="@string/div" />

    <Button
        android:id="@+id/equal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/dot"
        android:layout_alignRight="@+id/clear"
        android:layout_below="@+id/zero"
        android:layout_marginTop="18dp"
        android:text="@string/equal" />

    <Button
        android:id="@+id/per"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/mul"
        android:layout_alignTop="@+id/equal"
        android:text="@string/percentage" />

</RelativeLayout>